Fri Aug  2 23:50:53 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (power_cache_get_power): Appry bigtrunc to the result of
	  bigsq.
	  (big2str_karatsuba): Fix number of leading zero characters.

Fri Aug  2 23:48:36 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): calculate denominator directly as powers of
	  ten, not parsing string.

	* parse.y (parser_number_literal_suffix): return bit set of found
	  suffixes.

	* parse.y (parser_set_number_literal, parser_set_integer_literal):
	  split from parser_number_literal_suffix to set yyvlal.

	* parse.y (parser_yylex): parse rational number literal with decimal
	  point precisely.

	* parse.y (simple_numeric): integrate numeric literals and simplify
	  numeric rules.

	* ext/ripper/eventids2.c (ripper_init_eventids2): ripper support for
	  new literals, tRATIONAL and tIMAGINARY.

Fri Aug  2 18:33:28 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2str_karatsuba): Reduce power_level more than one at
	  recursion, if possible.
	  (rb_big2str1): Follow the above change.

Fri Aug  2 12:25:15 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul): Swap x and y for bary_mul1 if x is longer than y.
	  [ruby-dev:47565] [Bug #8719] Reported by Narihiro Nakamura.

Fri Aug  2 10:39:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* parse.y (negate_lit): add T_RATIONAL and T_COMPLEX to the switch
	  statement, and call rb_bug() if an unknown type is passed to
	  negate_lit(). [ruby-core:56316] [Bug #8717]

	* bootstraptest/test_literal_suffix.rb (assert_equal): add test

Fri Aug  2 09:14:47 2013  Eric Hodel  <drbrain@segment7.net>

	* doc/syntax/refinements.rdoc:  Improve description of where you may
	  activate refinements.

Fri Aug  2 07:45:55 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2str_orig): Remove len argument.
	  (big2str_karatsuba): Ditto.
	  (rb_big2str1): Follow above change.

Thu Aug  2 02:32:00 2013  Kenta Murata  <mrkn@mrkn.jp>
